# PortWorld

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  GETTING_STARTED.md  README.md  SECURITY.md  install.sh  pyproject.toml
IOS/: AGENTS.md  (+2 more)
backend/: .env.example  Dockerfile  README.md  __init__.py  cli.py  pyproject.toml  requirements.in  requirements.txt
backend/api/: app.py
backend/bootstrap/: memory_export.py  ops.py  runtime.py
backend/cli_app/: __init__.py  config_runtime.py  context.py  deploy_runtime.py  deploy_state.py  doctor_runtime.py  envfile.py  init_runtime.py  inspection_runtime.py  logs_runtime.py  main.py  ops_runtime.py  output.py  paths.py  project_config.py  provider_catalog.py  providers_runtime.py  state.py  status_runtime.py  update_runtime.py
backend/core/: __init__.py  provider_requirements.py  rate_limit.py  runtime.py  settings.py  storage.py
backend/debug/: __init__.py  mock_capture.py
backend/memory/: __init__.py  candidates.py  consolidation.py  events.py  indexing_v2.py  lifecycle.py  maintenance_policy_v2.py  maintenance_v2.py  materializer.py  normalization_v2.py  normalize.py  profile.py  repository_v2.py  retrieval_v2.py  types_v2.py
backend/realtime/: __init__.py  audio_uplink.py  bridge.py  bridge_audio.py  bridge_tool_dispatch.py  client.py  factory.py  session_modes.py  tool_dispatcher.py  turn_state.py
backend/scripts/: ws_probe.py
backend/tools/: __init__.py  catalog.py  contracts.py  instructions.py  memory.py  memory_candidates.py  openclaw.py  openclaw_runtime.py  profile.py  registry.py  runtime.py
(+422 files in other folders)
