[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portworld-backend"
dynamic = ["version"]
description = "PortWorld backend runtime package for container builds"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  {name = "PortWorld Maintainers"},
]
maintainers = [
  {name = "PortWorld Maintainers"},
]
dependencies = [
  "annotated-types==0.7.0",
  "anyio==4.11.0",
  "boto3==1.40.74",
  "botocore==1.40.74",
  "azure-identity==1.25.1",
  "azure-storage-blob==12.27.1",
  "certifi==2025.11.12",
  "fastapi==0.109.2",
  "google-cloud-storage==2.19.0",
  "h11==0.16.0",
  "httpcore==1.0.9",
  "httptools==0.7.1",
  "httpx==0.28.1",
  "idna==3.11",
  "Pillow==12.0.0",
  "psycopg[binary]==3.2.10",
  "pydantic==2.12.5",
  "pydantic-core==2.41.5",
  "python-dotenv==1.0.1",
  "PyYAML==6.0.3",
  "sniffio==1.3.1",
  "starlette==0.36.3",
  "typing-extensions==4.15.0",
  "typing-inspection==0.4.2",
  "uvicorn[standard]==0.27.1",
  "websockets==15.0.1",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["backend*"]
exclude = ["backend.build*"]

[tool.setuptools.dynamic]
version = {attr = "backend.__version__"}
